# Seqwill

./: CMakeLists.txt  ClusterSettings.txt  DevSettings.txt  README  regions.txt
analysis/: .Chromosome.cc.swp  AnalysisBase.h  Bam.cc  Bam.h  Chromosome.cc  Chromosome.h  Db.h  Dist.cc  Dist.h  Genome.cc  Genome.h  GenomeSeq.cc  GenomeSeq.h  HMM.cc  HMM.h  HSMM.cc  HSMM.h  KDE.cc  KDE.h  Kmeans.cc  Kmeans.h  MedipHMM.cc  MedipNormalize.cc  MedipNormalize.h  Nucleosome.cc  Nucleosome.h  Random.cc  Random.h  SeqData.h  Track.cc  Track.h  gsl_addon.cc  gsl_addon.h
base/: #CommandLineParser.h#  BEDelement.cc  BEDelement.h  CommandLineParser.h  Common.h  DNASequence.h  ErrorHandling.h  FileParser.cc  FileParser.h  FileUtil.cc  FileUtil.h  GFF.h  Hdf5Util.cc  Hdf5Util.h  Interval.h  Log.cc  Log.h  MatrixUtil.cc  MatrixUtil.h  NucConversion.h  ProgressBar.cc  ProgressBar.h  RefCount.h  ReportManager.h  StringUtil.cc  StringUtil.h  Types.h  WIG.cc  WIG.h
base/.svn/: all-wcprops  entries
base/.svn/text-base/: CommandLineParser.h.svn-base  EST.h.svn-base  FileParser.cc.svn-base  FileParser.h.svn-base  MetaInfoMgr.h.svn-base  ReportManager.h.svn-base  SVector.h.svn-base
common/: FileUtil.cc  FileUtil.h  Track.cc  Track.h  TrackMetadata.h
data/: ChrData.h  SeqData.h  TrackData.h
hdf5/: BufferedHDF2DArray.h  BufferedHDFArray.h  DatasetCollection.h  HDF2DArray.h  HDFArray.h  HDFAtom.h  HDFAttributable.h  HDFBasReader.h  HDFBasWriter.h  HDFCCSReader.h  HDFCmpData.h  HDFCmpExperimentGroup.h  HDFCmpFile.h  HDFCmpReader.h  HDFCmpRefAlignmentGroup.h  HDFCmpRootGroup.h  HDFCmpWriter.h  HDFCommonFG.h  HDFConfig.h  HDFData.h  HDFFile.h  HDFGenomeReader.h  HDFGenomeTrackData.h  HDFGenomeWriter.h  HDFGroup.h  HDFMovieInfoGroup.h  HDFPlsReader.h  HDFPlsWriter.h  HDFPulseDataFile.h  HDFRawPulseReader.h  HDFRefGroupGroup.h  HDFRefInfoGroup.h  HDFRegionTableReader.h  HDFRegionTableWriter.h  HDFSMRTSequenceReader.h  HDFScanDataReader.h  HDFTrackReader.h  HDFTrackWriter.h  HDFWriteBuffer.h  HDFZMWReader.h  (+1 more)
io/: BamIO.cc  BamIO.h  TrackIO.cc  TrackIO.h  TrackReader.cc  TrackReader.h  TrackWriter.cc  TrackWriter.h  Traits.h
test/: BamIOTest.cc  ChromosomeTest.cc  DistTest.cc  GenomeTest.cc  HDFTrackTest.cc  HMMTest.cc  KmeansTest.cc  LoadDataTest.cc  MedipNormTest.cc  NucMapTest.cc
tool/: CombineTrackFiles.cc  CountCpGs.cc  CpGAverage.cc  DipNormalize.cc  DipNormalize2.cc  DipNormalizeParallel.cc  DipNormalizeTBB.cc  GenerateHMMTestData.cc  HMMCompare.cc  HMMCompareTBB.cc  HMMPairwiseCompare.cc  LoadData.cc  LoadSeq.cc  NucHMM.cc  NucMap.cc  NucPosition.cc  NucRegionPositions.cc  Phasogram.cc  RPMNormalize.cc  ReadStartPileup.cc  ReduceResolution.cc  RnaSeqCoverage.cc  SubTrackToWig.cc  TrackToWig.cc
util/: .GrabSequenceFromGff.cc.swp  ExportCoverageToUCSC.cc  FastaParser.h  FastaPatternCount.cc  FastaQueryByCoords.cc  Genotype2HMMFeature.cc~  GrabFastaSequence.cc  ParseMarkName.h  SComm.cc  SComm.h  mutil.cc  svn-commit.tmp~
util/.svn/: all-wcprops  entries
util/.svn/text-base/: AlignmentSummary.cc.svn-base  CoordsList2GFF.cc.svn-base  Dist2Feature.cc.svn-base  ExportPolyCallsToUCSC.cc.svn-base  FastaParser.h.svn-base  FastaPatternCount.cc.svn-base  FastaQueryByCoords.cc.svn-base  GrabSequenceFromGff.cc.svn-base  KillProcesses.cc.svn-base  LoadAgpCoords.h.svn-base  ParseMarkName.h.svn-base  PrettyPrintAligns.cc.svn-base  PrintAligningReads.cc.svn-base  PrintMaskedAlignsAno.cc.svn-base  QCMarkup.cc.svn-base  QCMarkup.h.svn-base  QCMarkupIO.cc.svn-base  QCMarkupIO.h.svn-base  QCOps.cc.svn-base  QCOps.h.svn-base  SComm.cc.svn-base  SComm.h.svn-base  SysTime.cc.svn-base  SysTime.h.svn-base  WriteMaskedAlignments.cc.svn-base  mutil.cc.svn-base  mutil.h.svn-base
